@@ -3,11 +3,13 @@
 #' Naked DNA damage BSWF
 #'
 #' @param norm normalization wavelength (nm)
+#' @param w.low short-end boundary wavelength (nm)
+#' @param w.high long-end boundary wavelength (nm)
 #'
 #' @return a waveband object wavelength defining wavelength range, weighting function
 #' and normalization wavelength.
 #'
-#' @usage DNA.N(norm=300)
+#' @usage DNA.N(norm=300, w.low=275, w.high=400)
 #' @references
 #' Webb, A. (20XX)
 #'
@@ -19,8 +21,8 @@
 #' DNA.N()
 #' DNA.N(300)
 
-DNA.N <- function(norm=300) {
-  new_waveband(w.low=275, w.high=400, SWF.norm=300,
+DNA.N <- function(norm=300, w.low=275, w.high=400) {
+  new_waveband(w.low=w.low, w.high=w.high, SWF.norm=300,
                weight="SWF", SWF.q.fun=DNA.N.q.fun,
                norm=norm, wb.name=paste("DNA.N", as.character(norm), sep="."), wb.label="DNA Naked")
 }
