@@ -3,12 +3,13 @@
 #' Generalized Plant Action BSWF of Caldwell as formulated by Timijan et al.
 #'
 #' @param norm normalization wavelength (nm)
+#' @param w.low short-end boundary wavelength (nm)
 #' @param w.high long-end boundary wavelength (nm)
 #'
 #' @return a waveband object wavelength defining wavelength range, weighting function
 #' and normalization wavelength.
 #'
-#' @usage GEN.T(norm=300, w.high=390)
+#' @usage GEN.T(norm=300, w.low=275, w.high=345)
 #' @references
 #' Caldwell, M. M. (1971)
 #' Timijan et al. (198X)
@@ -20,7 +21,7 @@
 #' GEN.T()
 #' GEN.T(300)
 
-GEN.T <- function(norm=300, w.high=390) {
-  new_waveband(w.low=275, w.high=w.high, weight="SWF", SWF.q.fun=GEN.T.q.fun, SWF.norm=300,
+GEN.T <- function(norm=300, w.low=275, w.high=345) {
+  new_waveband(w.low=w.low, w.high=w.high, weight="SWF", SWF.q.fun=GEN.T.q.fun, SWF.norm=300,
                norm=norm, wb.name=paste("GEN.T", as.character(norm), sep="."), wb.label="GEN(T)")
 }
